add annotation to some examples of `string` clause
as titled

--- a/docs-2.0-zh/3.ngql-guide/5.operators/7.string.md
+++ b/docs-2.0-zh/3.ngql-guide/5.operators/7.string.md
@@ -20,6 +20,7 @@
 ### `+`
 
 ```ngql
+# 返回连接后的字符串。
 nebula> RETURN 'a' + 'b';
 +-----------+
 | ("a"+"b") |
@@ -39,6 +40,7 @@ nebula> UNWIND 'a' AS a UNWIND 'b' AS b RETURN a + b;
 `CONTAINS`要求待运算的左右两边都是字符串类型。
 
 ```ngql
+# 查询返回 id 值为 player101，且目标点属性 name 中含有"ets"的数据。
 nebula> MATCH (s:player)-[e:serve]->(t:team) WHERE id(s) == "player101" \
         AND t.team.name CONTAINS "ets" RETURN s.player.name, e.start_year, e.end_year, t.team.name;
 +---------------+--------------+------------+-------------+
@@ -47,6 +49,7 @@ nebula> MATCH (s:player)-[e:serve]->(t:team) WHERE id(s) == "player101" \
 | "Tony Parker" | 2018         | 2019       | "Hornets"   |
 +---------------+--------------+------------+-------------+
 
+# 查询返回 player101 的边属性 start_year 转为字符串后含有"19"，且点属性 name 中含有"ny"的数据。
 nebula> GO FROM "player101" OVER serve WHERE (STRING)properties(edge).start_year CONTAINS "19" AND \
         properties($^).name CONTAINS "ny" \
         YIELD properties($^).name, properties(edge).start_year, properties(edge).end_year, properties($$).name;
@@ -56,6 +59,7 @@ nebula> GO FROM "player101" OVER serve WHERE (STRING)properties(edge).start_year
 | "Tony Parker"       | 1999                        | 2018                      | "Spurs"             |
 +---------------------+-----------------------------+---------------------------+---------------------+
 
+# 查询返回 palyer101 指向的目标点属性 name 中不含有"ets"的数据。
 nebula> GO FROM "player101" OVER serve WHERE !(properties($$).name CONTAINS "ets") \
         YIELD properties($^).name, properties(edge).start_year, properties(edge).end_year, properties($$).name;
 +---------------------+-----------------------------+---------------------------+---------------------+
@@ -68,6 +72,7 @@ nebula> GO FROM "player101" OVER serve WHERE !(properties($$).name CONTAINS "ets
 ### `(NOT) IN`
 
 ```ngql
+# 返回列表中是否含有某个值。
 nebula> RETURN  1 IN [1,2,3], "Yao" NOT IN ["Yi", "Tim", "Kobe"], NULL IN ["Yi", "Tim", "Kobe"];
 +----------------+------------------------------------+-------------------------------+
 | (1 IN [1,2,3]) | ("Yao" NOT IN ["Yi","Tim","Kobe"]) | (NULL IN ["Yi","Tim","Kobe"]) |
@@ -79,6 +84,7 @@ nebula> RETURN  1 IN [1,2,3], "Yao" NOT IN ["Yi", "Tim", "Kobe"], NULL IN ["Yi",
 ### `(NOT) STARTS WITH`
 
 ```ngql
+# 返回是否以某个字符串开头。
 nebula> RETURN 'apple' STARTS WITH 'app', 'apple' STARTS WITH 'a', 'apple' STARTS WITH toUpper('a');
 +-----------------------------+---------------------------+------------------------------------+
 | ("apple" STARTS WITH "app") | ("apple" STARTS WITH "a") | ("apple" STARTS WITH toUpper("a")) |
@@ -97,6 +103,7 @@ nebula> RETURN 'apple' STARTS WITH 'b','apple' NOT STARTS WITH 'app';
 ### `(NOT) ENDS WITH`
 
 ```ngql
+# 返回是否以某个字符串结尾。
 nebula> RETURN 'apple' ENDS WITH 'app', 'apple' ENDS WITH 'e', 'apple' ENDS WITH 'E', 'apple' ENDS WITH 'b';
 +---------------------------+-------------------------+-------------------------+-------------------------+
 | ("apple" ENDS WITH "app") | ("apple" ENDS WITH "e") | ("apple" ENDS WITH "E") | ("apple" ENDS WITH "b") |
@@ -114,6 +121,7 @@ nebula> RETURN 'apple' ENDS WITH 'app', 'apple' ENDS WITH 'e', 'apple' ENDS WITH
  {{nebula.name}} 支持使用正则表达式进行过滤，正则表达式的语法是继承自`std::regex`，用户可以使用语法`=~ '<regexp>'`进行正则表达式匹配。例如：
 
 ```ngql
+# 返回是否匹配正则表达式。
 nebula> RETURN "384748.39" =~ "\\d+(\\.\\d{2})?";
 +--------------------------------+
 | ("384748.39"=~"\d+(\.\d{2})?") |
@@ -121,6 +129,7 @@ nebula> RETURN "384748.39" =~ "\\d+(\\.\\d{2})?";
 | true                           |
 +--------------------------------+
 
+# 查询返回符合正则表达式的点数据。
 nebula> MATCH (v:player) WHERE v.player.name =~ 'Tony.*' RETURN v.player.name;
 +---------------+
 | v.player.name |
