unhide faq questions

--- a/docs-2.0-en/20.appendix/0.FAQ.md
+++ b/docs-2.0-en/20.appendix/0.FAQ.md
@@ -57,8 +57,8 @@ From NebulaGraph version 3.0.0, the Storage services added in the configuration 
 
 From NebulaGraph version 3.0.0, patterns support matching multiple tags at the same time, so you need to specify a tag name when querying properties. The original statement `RETURN variable_name.property_name` is changed to `RETURN variable_name.<tag_name>.property_name`.
 
-<!--
-### "How to resolve `[ERROR (-1005)]: Used memory hits the high watermark(0.800000) of total system memory.`?"
+
+### "How to resolve `Used memory hits the high watermark(0.800000) of total system memory.`?"
 
 The reason for this error may be that `system_memory_high_watermark_ratio` specifies the trigger threshold of the memory high watermark alarm mechanism. The default value is `0.8`. If the system memory usage is higher than this value, an alarm mechanism will be triggered, and NebulaGraph will stop querying.
 
@@ -67,7 +67,7 @@ Possible solutions are as follows:
 * Clean the system memory to make it below the threshold.
 * [Modify the Graph configuration](../5.configurations-and-logs/1.configurations/1.configurations.md). Add the `system_memory_high_watermark_ratio` parameter to the configuration files of all Graph servers, and set it greater than `0.8`, such as `0.9`.
 
--->
+
 
 ### "How to resolve the error `Storage Error E_RPC_FAILURE`?"
 
@@ -85,8 +85,8 @@ It is a known issue. Just retry 1 to N times, where N is the partition number. T
 
 If this error occurs when logging in to NebulaGraph, you can consider using `df -h` to view the disk space and check whether the local disk is full.
 
-<!--
-### "How to resolve `[ERROR (-1005)]: Schema not exist: xxx`?"
+
+### "How to resolve `Schema not exist: xxx`?"
 
 If the system returns `Schema not exist` when querying, make sure that:
 
@@ -94,7 +94,7 @@ If the system returns `Schema not exist` when querying, make sure that:
 
 - Whether the name of the tag or the edge type is a keyword. If it is a keyword, enclose them with backquotes (\`). For more information, see [Keywords](../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md).
 
--->
+
 
 ### Unable to download SNAPSHOT packages when compiling Exchange, Connectors, or Algorithm
 
