--- a/docs-2.0-en/20.appendix/0.FAQ.md
+++ b/docs-2.0-en/20.appendix/0.FAQ.md
@@ -67,7 +67,7 @@ Possible solutions are as follows:
 * Clean the system memory to make it below the threshold.
 * [Modify the Graph configuration](../5.configurations-and-logs/1.configurations/1.configurations.md). Add the `system_memory_high_watermark_ratio` parameter to the configuration files of all Graph servers, and set it greater than `0.8`, such as `0.9`.
 
-
+You can also use the Memory Tracker feature to limit the memory usage of Graph and Storage services. For more information, see [Memory Tracker for Graph service](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory-tracker-configurations) and [Memory Tracker for Storage service](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory-tracker-configurations).
 
 ### "How to resolve the error `Storage Error E_RPC_FAILURE`?"
 
