--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -76,7 +76,7 @@
 * 清理系统内存，使其降低到阈值以下。
 * [修改 Graph 配置](../5.configurations-and-logs/1.configurations/1.configurations.md)。在所有 Graph 服务器的配置文件中增加`system_memory_high_watermark_ratio`参数，为其设置一个大于`0.8`的值，例如`0.9`。
 
-同时，用户可使用 Memory Tracker 功能来限制{{nebula.name}}的内存使用量。详情请参见 [Graph 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory_tracker)和 [Storage 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory_tracker)
+需要注意的是`system_memory_high_watermark_ratio`参数已被弃用。建议用户使用 Memory Tracker 功能来限制{{nebula.name}}的内存使用量。详情请参见 [Graph 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory_tracker)和 [Storage 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory_tracker)。
 
 ### 如何处理错误信息`Storage Error E_RPC_FAILURE`
 
