--- a/docs-2.0-en/20.appendix/0.FAQ.md
+++ b/docs-2.0-en/20.appendix/0.FAQ.md
@@ -60,14 +60,14 @@ From NebulaGraph version 3.0.0, patterns support matching multiple tags at the s
 
 ### "How to resolve `Used memory hits the high watermark(0.800000) of total system memory.`?"
 
-The reason for this error may be that `system_memory_high_watermark_ratio` specifies the trigger threshold of the memory high watermark alarm mechanism. The default value is `0.8`. If the system memory usage is higher than this value, an alarm mechanism will be triggered, and NebulaGraph will stop querying.
+The error may be caused if the system memory usage is higher than the threshold specified by`system_memory_high_watermark_ratio`, which defaults to `0.8`. When the threshold is exceeded, an alarm is triggered and NebulaGraph stops processing queries.
 
 Possible solutions are as follows:
 
 * Clean the system memory to make it below the threshold.
 * [Modify the Graph configuration](../5.configurations-and-logs/1.configurations/1.configurations.md). Add the `system_memory_high_watermark_ratio` parameter to the configuration files of all Graph servers, and set it greater than `0.8`, such as `0.9`.
 
-However, the `system_memory_high_watermark_ratio` parameter has been deprecated. Instead, you can use the Memory Tracker feature to limit the memory usage of Graph and Storage services. For more information, see [Memory Tracker for Graph service](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory-tracker-configurations) and [Memory Tracker for Storage service](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory-tracker-configurations).
+However, the `system_memory_high_watermark_ratio` parameter is deprecated. It is recommended that you use the Memory Tracker feature instead to limit the memory usage of Graph and Storage services. For more information, see [Memory Tracker for Graph service](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory-tracker-configurations) and [Memory Tracker for Storage service](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory-tracker-configurations).
 
 ### "How to resolve the error `Storage Error E_RPC_FAILURE`?"
 
