unhide faq questions (#2404)
* unhide faq questions

* updates

* fix

* Update 0.FAQ.md

--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -66,8 +66,8 @@
 
 从 3.0.0 版本开始，`pattern`支持同时匹配多个 Tag，所以返回属性时，需要额外指定 Tag 名称。即从`RETURN 变量名.属性名`改为`RETURN 变量名.Tag名.属性名`。
 
-<!--
-### 如何处理错误信息 `[ERROR (-1005)]: Used memory hits the high watermark(0.800000) of total system memory.`
+
+### 如何处理错误信息 `Used memory hits the high watermark(0.800000) of total system memory.`
 
 报错原因： {{nebula.name}} 的`system_memory_high_watermark_ratio`参数指定了内存高水位报警机制的触发阈值，默认为`0.8`。系统内存占用率高于该值会触发报警机制，{{nebula.name}} 会停止接受查询。
 
@@ -76,7 +76,7 @@
 * 清理系统内存，使其降低到阈值以下。
 * [修改 Graph 配置](../5.configurations-and-logs/1.configurations/1.configurations.md)。在所有 Graph 服务器的配置文件中增加`system_memory_high_watermark_ratio`参数，为其设置一个大于`0.8`的值，例如`0.9`。
 
--->
+需要注意的是`system_memory_high_watermark_ratio`参数已被弃用。建议用户使用 Memory Tracker 功能来限制{{nebula.name}}的内存使用量。详情请参见 [Graph 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/3.graph-config.md#memory_tracker)和 [Storage 服务的 memory tracker 配置](../5.configurations-and-logs/1.configurations/4.storage-config.md#memory_tracker)。
 
 ### 如何处理错误信息`Storage Error E_RPC_FAILURE`
 
@@ -94,8 +94,8 @@
 
 如果登录 {{nebula.name}} 时，出现该报错，可以考虑使用 `df -h` 查看磁盘空间，检查本地磁盘空间是否已满。
 
-<!--
-### [ERROR (-1005)]: Schema not exist: xxx
+
+### Schema not exist: xxx
 
 查询时提示`Schema not exist`，请确认：
 
@@ -103,7 +103,7 @@
 
 - Tag 或 Edge type 的名称是否为关键字，如果是关键字，请使用反引号（\`）将它们括起来。详情请参见[关键字](../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md)。
 
--->
+
 
 ### 编译 Exchange、Connectors、Algorithm 时无法下载 SNAPSHOT 包
 
