descriptions for escape character `\`
Update 1.create-tag.md

add-on

changes

--- a/docs-2.0-en/3.ngql-guide/3.data-types/3.string.md
+++ b/docs-2.0-en/3.ngql-guide/3.data-types/3.string.md
@@ -38,13 +38,33 @@ When the fixed-length string you try to write exceeds the length limit:
 - If the fixed-length string is a property, the writing will succeed, and NebulaGraph will truncate the string and only store the part that meets the length limit.
 - If the fixed-length string is a VID, the writing will fail and NebulaGraph will return an error.
 
-## Escape characters
+## Escape Characters
 
-Line breaks are not allowed in a string. Escape characters are supported within strings, for example:
+In strings, the backslash (`\`) serves as an escape character used to denote special characters.
 
-- `"\n\t\r\b\f"`
+For example, to include a double quote (`"`) within a string, you cannot directly write `"Hello "world""` as it leads to a syntax error. Instead, use the backslash (`\`) to escape the double quote, such as `"Hello \"world\""`.
 
-- `"\110ello world"`
+```ngql
+nebula> RETURN "Hello \"world\""
++-----------------+
+| "Hello "world"" |
++-----------------+
+| "Hello "world"" |
++-----------------+
+```
+
+The backslash itself needs to be escaped as it's a special character. For example, to include a backslash in a string, you need to write `"Hello \\ world"`.
+
+```ngql
+nebula> RETURN "Hello \\ world"
++-----------------+
+| "Hello \ world" |
++-----------------+
+| "Hello \ world" |
++-----------------+
+```
+
+For more examples of escape characters, see [Escape character examples](https://en.wikipedia.org/wiki/Escape_character#Examples).
 
 ## OpenCypher compatibility
 
