--- a/docs-2.0-zh/3.ngql-guide/3.data-types/3.string.md
+++ b/docs-2.0-zh/3.ngql-guide/3.data-types/3.string.md
@@ -40,11 +40,32 @@ nGQL 支持以如下方式使用字符串：
 
 ## 转义字符
 
-字符串中不支持直接换行，可以使用转义字符实现，例如：
+反斜杠（`\`）在字符串中为转义字符，用于表示特殊字符。
 
-- `"\n\t\r\b\f"`
+例如，如果想在一个字符串中包含一个双引号(`"`), 不能直接写`"Hello "world""`，因为这会引起语法错误。相反，需要使用反斜杠（`\`）来转义双引号，如`"Hello \"world\""`。
 
-- `"\110ello world"`
+```ngql
+nebula> RETURN "Hello \"world\""
++-----------------+
+| "Hello "world"" |
++-----------------+
+| "Hello "world"" |
++-----------------+
+```
+
+同样，反斜杠本身也需要转义，因为它是一个特殊字符。例如，要在字符串中包含一个反斜杠，需要写成`"Hello \\ world"`。
+
+```ngql
+nebula> RETURN "Hello \\ world"
++-----------------+
+| "Hello \ world" |
++-----------------+
+| "Hello \ world" |
++-----------------+
+```
+
+更多转义字符的示例，请参见 [Escape character examples](https://en.wikipedia.org/wiki/Escape_character#Examples)。
+
 
 ## OpenCypher 兼容性
 
