--- a/docs-2.0-en/3.ngql-guide/10.tag-statements/1.create-tag.md
+++ b/docs-2.0-en/3.ngql-guide/10.tag-statements/1.create-tag.md
@@ -31,11 +31,11 @@ CREATE TAG [IF NOT EXISTS] <tag_name>
 |Parameter|Description|
 |:---|:---|
 |`IF NOT EXISTS`|Detects if the tag that you want to create exists. If it does not exist, a new one will be created. The tag existence detection here only compares the tag names (excluding properties).|
-|`<tag_name>`|1. Each tag name in the graph space must be **unique**. <br>2. Tag names cannot be modified after they are set.<br/> 3. By default, the name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. However, it cannot include special characters other than the underscore (_), and cannot start with a number.<br/> 4. To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and do not include periods (`.`) within the pair of backticks (\`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md). <br/>**Note**: If you name a tag in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`).|
+|`<tag_name>`|1. Each tag name in the graph space must be **unique**. <br>2. Tag names cannot be modified after they are set.<br/> 3. By default, the name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. However, it cannot include special characters other than the underscore (_), and cannot start with a number.<br/> 4. To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and do not include periods (.) within the pair of backticks (\`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md). <br/>**Note**:<br/>1. If you name a tag in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). <br/>2. To include a backtick (\`) in a tag name, use a backslash to escape the backtick, such as \\\`; to include a backslash, the backslash itself also needs to be escaped, such as \\\ .  |
 |`<prop_name>`|The name of the property. It must be unique for each tag. The rules for permitted property names are the same as those for tag names.|
 |`<data_type>`|Shows the data type of each property. For a full description of the property data types, see [Data types](../3.data-types/1.numeric.md) and [Boolean](../3.data-types/2.boolean.md).|
 |`NULL | NOT NULL`|Specifies if the property supports `NULL | NOT NULL`. The default value is `NULL`. |
-|`DEFAULT`|Specifies a default value for a property. The default value can be a literal value or an expression supported by NebulaGraph. If no value is specified, the default value is used when inserting a new vertex.|
+|`DEFAULT`|Specifies a default value for a property. The default value can be a literal value or an expression supported by NebulaGraph. If no value is specified, the default value is used when inserting a new vertex.| 
 |`COMMENT`|The remarks of a certain property or the tag itself. The maximum length is 256 bytes. By default, there will be no comments on a tag.|
 |`TTL_DURATION`|Specifies the life cycle for the property. The property that exceeds the specified TTL expires. The expiration threshold is the `TTL_COL` value plus the `TTL_DURATION`. The default value of `TTL_DURATION` is `0`. It means the data never expires.|
 |`TTL_COL`|Specifies the property to set a timeout on. The data type of the property must be `int` or `timestamp`. A tag can only specify one field as `TTL_COL`. For more information on TTL, see [TTL options](../8.clauses-and-options/ttl-options.md).|
