--- a/docs-2.0-en/3.ngql-guide/14.native-index-statements/1.create-native-index.md
+++ b/docs-2.0-en/3.ngql-guide/14.native-index-statements/1.create-native-index.md
@@ -67,7 +67,7 @@ CREATE {TAG | EDGE} INDEX [IF NOT EXISTS] <index_name> ON {<tag_name> | <edge_na
 |:---|:---|
 |`TAG | EDGE`|Specifies the index type that you want to create.|
 |`IF NOT EXISTS`|Detects if the index that you want to create exists. If it does not exist, a new one will be created.|
-|`<index_name>`|1. The name of the index. It must be unique in a graph space. A recommended way of naming is `i_tagName_propName`. <br/>2. By default, the name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. However, it cannot include special characters other than the underscore (_), and cannot start with a number.<br/>3. To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and do not include periods (`.`) within the pair of backticks (\`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md).<br/>**Note**: If you name an index in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). |
+|`<index_name>`|1. The name of the index. It must be unique in a graph space. A recommended way of naming is `i_tagName_propName`. <br/>2. By default, the name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. However, it cannot include special characters other than the underscore (_), and cannot start with a number.<br/>3. To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and do not include periods (`.`) within the pair of backticks (\`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md).<br/>**Note**:<br/>1. If you name an index in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). <br/>2. To include a backtick (\`) in a tag name, use a backslash to escape the backtick, such as \\\`; to include a backslash, the backslash itself also needs to be escaped, such as \\\ .|
 |`<tag_name> | <edge_name>`|Specifies the name of the tag or edge associated with the index.|
 |`<prop_name_list>`|To index a **variable-length** string property, you must use `prop_name(length)` to specify the index length, and the maximum index length is 256. To index a tag or an edge type, ignore the `prop_name_list`.|
 |`COMMENT`|The remarks of the index. The maximum length is 256 bytes. By default, there will be no comments on an index.|
