--- a/docs-2.0-en/3.ngql-guide/9.space-statements/1.create-space.md
+++ b/docs-2.0-en/3.ngql-guide/9.space-statements/1.create-space.md
@@ -64,7 +64,7 @@ CREATE SPACE [IF NOT EXISTS] <new_graph_space_name> AS <old_graph_space_name>;
 | Parameter | Description |
 | :--- | :--- |
 |`IF NOT EXISTS`|Detects if the new graph space exists. If it does not exist, the new one will be created. The graph space existence detection here only compares the graph space name (excluding properties).|
-| `<new_graph_space_name>` | The name of the graph space that is newly created. <br/> By default, the space name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. But special characters can only use underscore, and cannot start with a number.<br/> To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and cannot use periods (`.`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md). <br/>When a new graph space is created, the schema of the old graph space `<old_graph_space_name>` will be cloned, including its parameters (the number of partitions and replicas, etc.), Tag, Edge type and native indexes.<br/> **Note**:<br/>1. If you name a space in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). <br/>2. To include a backtick (\`) in a tag name, use a backslash to escape the backtick, such as \\\`; to include a backslash, the backslash itself also needs to be escaped, such as \\\ .|
+| `<new_graph_space_name>` | The name of the graph space that is newly created. <br/> By default, the space name only supports 1-4 byte UTF-8 encoded characters, including English letters (case sensitive), numbers, Chinese characters, etc. But special characters can only use underscore, and cannot start with a number.<br/> To use special characters, reserved keywords, or start with a number, quote the entire name with backticks (\`) and cannot use periods (`.`). For more information, see [Keywords and reserved words](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md). <br/>When a new graph space is created, the schema of the old graph space `<old_graph_space_name>` will be cloned, including its parameters (the number of partitions and replicas, etc.), Tag, Edge type and native indexes.<br/> **Note**:<br/>1. If you name a space in Chinese and encounter a `SyntaxError`, you need to quote the Chinese characters with backticks (\`). <br/>2. To include a backtick (\`) in a space name, use a backslash to escape the backtick, such as \\\`; to include a backslash, the backslash itself also needs to be escaped, such as \\\ .|
 | `<old_graph_space_name>` | The name of the graph space that already exists. |
 
 ## Examples
