update thread desc

--- a/docs-2.0-en/14.client/1.nebula-client.md
+++ b/docs-2.0-en/14.client/1.nebula-client.md
@@ -14,8 +14,11 @@ NebulaGraph supports multiple types of clients for users to connect to and manag
 
 !!! note
 
-    For now, only NebulaGraph Java is thread-safe.
+    Only the following classes are thread-safe:
 
+    -  NebulaPool and SessionPool in NebulaGraph Java
+    -  ConnectionPool and SessionPool in NebulaGraph Go
+  
 !!! caution
 
     The following clients can also be used to connect to and manage NebulaGraph, but there is no uptime guarantee.
