--- a/docs-2.0-zh/14.client/1.nebula-client.md
+++ b/docs-2.0-zh/14.client/1.nebula-client.md
@@ -14,7 +14,10 @@
 
 !!! note
 
-    目前仅 NebulaGraph Java 客户端支持线程安全（thread-safe）。
+    仅以下类支持线程安全（thread-safe）：
+
+    - NebulaGraph Java 客户端提供的 NebulaPool 和 SessionPool 
+    - NebulaGraph Go 客户端提供的 ConnectionPool 和 SessionPool
 
 !!! caution
 
