docs: add annotation to first two examples of `MATCH` clause

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -44,6 +44,7 @@ MATCH <pattern> [<clause_1>]  RETURN <output>  [<clause_2>];
 用户可以在一对括号中使用自定义变量来表示模式中的点。例如`(v)`。
 
 ```ngql
+# 匹配全图空间中的任意 3 个点
 nebula> MATCH (v) \
         RETURN v \
         LIMIT 3;
@@ -65,6 +66,7 @@ nebula> MATCH (v) \
 用户可以在点的右侧用`:<tag_name>`表示模式中的 Tag。
 
 ```ngql
+# 匹配全图空间中所有 Tag 为 player 的点
 nebula> MATCH (v:player) \
         RETURN v;
 +-----------------------------------------------------------+
