--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -111,7 +111,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"}) \
 使用`WHERE`子句也可以实现相同的操作：
 
 ```ngql
-# 查找类型为playe，名字为Tim Duncan的点
+# 查找类型为 player，名字为 Tim Duncan 的点
 nebula> MATCH (v:player) \
         WHERE v.player.name == "Tim Duncan" \
         RETURN v;
@@ -158,7 +158,7 @@ nebula> WITH ['Tim Duncan', 'Yao Ming'] AS names \
 用户可以使用点 ID 去匹配点。`id()`函数可以检索点的 ID。
 
 ```ngql
-# 查找id为“player101”的点。（注：id全局唯一）
+# 查找 id 为 “player101” 的点。（注：id 全局唯一）
 nebula> MATCH (v) \
         WHERE id(v) == 'player101' \
         RETURN v;
@@ -172,7 +172,7 @@ nebula> MATCH (v) \
 要匹配多个点的 ID，可以用`WHERE id(v) IN [vid_list]`或者`WHERE id(v) IN {vid_list}`。
 
 ```ngql
-# 查找id为"player101"或者"player102"，他的一度关系里有类型为player，名字为'Tim Duncan'的点
+# 查找 id 为 "player101" 或者 "player102"，他的一度关系里有类型为 player，名字为 'Tim Duncan' 的点
 nebula> MATCH (v:player { name: 'Tim Duncan' })--(v2) \
         WHERE id(v2) IN ["player101", "player102"] \
         RETURN v2;
