how to recycle running logs (#215)
* how to recycle running logs

* Update 0.FAQ.md

Update 0.FAQ.md

* addons

* Update docs-2.0-en/5.configurations-and-logs/2.log-management/logs.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/5.configurations-and-logs/2.log-management/logs.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/5.configurations-and-logs/2.log-management/logs.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/5.configurations-and-logs/2.log-management/logs.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* comment fix

---------

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/20.appendix/0.FAQ.md
+++ b/docs-2.0-en/20.appendix/0.FAQ.md
@@ -313,12 +313,7 @@ You can use [NebulaGraph Algorithm](../graph-computing/nebula-algorithm.md).
 
 ### "The runtime log files are too large. How to recycle the logs?"
 
-By default, the runtime logs of NebulaGraph are stored in  `/usr/local/nebula/logs/`. The INFO level log files are `nebula-graphd.INFO, nebula-storaged.INFO, nebula-metad.INFO`. If an alarm or error occurs, the suffixes are modified as `.WARNING` or `.ERROR`.
-
-NebulaGraph uses [glog](https://github.com/google/glog) to print logs. `glog` cannot recycle the outdated files. To rotate logs, you can:
-
--  Add the parameters `timestamp_in_logfile_name=true` (timestamp added to logfile) and `max_log_size=500` (log size limit in MB) to the configuration files of the three services, and then use crontab to delete logs periodically. For more information, see [`Glog should delete old log files automatically`](https://github.com/google/glog/issues/423).
--  Use [logrotate](https://github.com/logrotate/logrotate) to manage log files. Before using logrotate, modify the configurations of corresponding services and set `timestamp_in_logfile_name` to `false`.
+{{nebula.name}} uses [glog](https://github.com/google/glog) for log printing, which does not support log recycling. You can manage runtime logs by using cron jobs or the log management tool [logrotate](https://man7.org/linux/man-pages/man8/logrotate.8.html). For operational details, see [Log recycling](../5.configurations-and-logs/2.log-management/logs.md).
 
 ### "How to check the NebulaGraph version?"
 
