--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -331,12 +331,7 @@ nebula > MATCH (s)<-[e]-() WHERE id(s) == "given" RETURN count(e); #入度
 
 ### 运行日志文件过大时如何回收日志？
 
-{{nebula.name}} 的运行日志默认在 `/usr/local/nebula/logs/` 下，正常 INFO 级别日志文件为 `nebula-graphd.INFO, nebula-storaged.INFO, nebula-metad.INFO`，报警和错误级别后缀为 `.WARNING` 和 `.ERROR`。
-
-{{nebula.name}} 使用 [glog](https://github.com/google/glog) 打印日志。glog 没有日志回收的功能，用户可以：
-
-- 在三种服务的配置文件内添加参数`timestamp_in_logfile_name=true`（日志文件添加时间戳）和`max_log_size=500`（日志大小限制，单位 MB），然后使用 crontab 设置定期任务回收日志文件。详情请参见 [Glog should delete old log files automatically](https://github.com/google/glog/issues/423)。
-- 使用 [logrotate](https://github.com/logrotate/logrotate) 实现[日志轮询](https://discuss.nebula-graph.com.cn/t/topic/7803)。使用 logrotate 管理日志前需修改相应 {{nebula.name}} 服务的配置，将`timestamp_in_logfile_name`参数的值改成`false`。
+{{nebula.name}}使用 [glog](https://github.com/google/glog) 打印日志，glog 没有日志回收的功能。用户可以通过定时任务或日志管理工具 [logrotate](https://man7.org/linux/man-pages/man8/logrotate.8.html) 来管理运行日志。操作详情，参见[回收日志](../5.configurations-and-logs/2.log-management/logs.md)。
 
 ### 如何查看 {{nebula.name}} 版本
 
