disable THP permanently (#221)
commentfix

fix

Update docs-2.0-en/5.configurations-and-logs/1.configurations/6.kernel-config.md

Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/6.kernel-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/6.kernel-config.md
@@ -47,17 +47,50 @@ You can run `man limits.conf` for more helpful information.
 
 These values control the dirty data cache for the system. For write-intensive scenarios, you can make adjustments based on your needs (throughput priority or delay priority). We recommend that you use the system default value.
 
-### Transparent huge page
+### Transparent Huge Pages
 
-For better delay performance, you must run the following commands to disable the transparent huge pages (THP).
+Transparent Huge Pages (THP) is a memory management feature of the Linux kernel, which enhances the system's ability to use large pages. In most database systems, Transparent Huge Pages can degrade performance, so it is recommended to disable it.
 
-```bash
-root# echo never > /sys/kernel/mm/transparent_hugepage/enabled
-root# echo never > /sys/kernel/mm/transparent_hugepage/defrag
-root# swapoff -a && swapon -a
-```
+Perform the following steps:
 
-To prevent THP from being enabled again after the system restarts, you can modify the GRUB configuration file or `/etc/rc.local` to disable THP automatically upon system startup.
+1. Edit the GRUB configuration file `/etc/default/grub`.
+
+  ```bash
+  sudo vi /etc/default/grub
+  ```
+
+2. Add `transparent_hugepage=never` to the `GRUB_CMDLINE_LINUX` option, and then save and exit.
+
+  ```bash
+  GRUB_CMDLINE_LINUX="... transparent_hugepage=never"
+  ```
+
+3. Update the GRUB configuration.
+
+  - For CentOS:
+
+    ```bash
+    sudo grub2-mkconfig -o /boot/grub2/grub.cfg
+    ```
+  
+  - For Ubuntu:
+
+    ```bash
+    sudo update-grub
+    ```
+
+5. Reboot the computer.
+
+  ```bash
+  sudo reboot
+  ```
+
+  If you don't want to reboot, you can run the following commands to temporarily disable THP until the next reboot.
+  
+  ```bash
+  echo 'never' > /sys/kernel/mm/transparent_hugepage/enabled
+  echo 'never' > /sys/kernel/mm/transparent_hugepage/defrag
+  ```
 
 ## Networking
 
