configuration files updates
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -60,7 +60,7 @@ Meta 服务提供了两份初始配置文件`nebula-metad.conf.default`和`nebul
 | `ws_ip`                   | `0.0.0.0`      | HTTP 服务的 IP 地址。                                   |不支持|
 | `ws_http_port`            | `19559`        | HTTP 服务的端口。                                     |不支持|
 |`ws_storage_http_port`|`19779`| HTTP 协议监听 Storage 服务的端口，需要和 Storage 服务配置文件中的`ws_http_port`保持一致。仅存算合并版 {{nebula.name}} 需要设置本参数。|不支持|
-|`heartbeat_interval_secs`  | `10`     | 默认心跳间隔。请确保所有服务的`heartbeat_interval_secs`取值相同，否则会导致系统无法正常工作。单位：秒。     |支持|
+
 
 !!! caution
 
@@ -78,6 +78,8 @@ Meta 服务提供了两份初始配置文件`nebula-metad.conf.default`和`nebul
 | :------------------------- | :-------- | :------------------------ |:------------------|
 |`default_parts_num`        | `10`    | 创建图空间时的默认分片数量。  |不支持|
 |`default_replica_factor`   | `1`      | 创建图空间时的默认副本数量。  |不支持|
+|`heartbeat_interval_secs`  | `10`     | 默认心跳间隔。请确保所有服务的`heartbeat_interval_secs`取值相同，否则会导致系统无法正常工作。单位：秒。     |支持|
+|`agent_heartbeat_interval_secs`| `60` | Agent 服务发送心跳的时间间隔。该值影响系统确定 Agent 服务离线状态的时间。|不支持|
 
 ## rocksdb options 配置
 
