--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -58,7 +58,6 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | `ws_ip`                   | `0.0.0.0`      | Specifies the IP address for the HTTP service.                                   |  No|
 | `ws_http_port`            | `19559`        | Specifies the port for the HTTP service.                                         |  No|
 |`ws_storage_http_port`|`19779`| Specifies the Storage service listening port used by the HTTP protocol. It must be consistent with the `ws_http_port` in the Storage service configuration file. This parameter only applies to standalone NebulaGraph.|  No|
-|`heartbeat_interval_secs`  | `10`     | Specifies the default heartbeat interval. Make sure the `heartbeat_interval_secs` values for all services are the same, otherwise NebulaGraph **CANNOT** work normally. This configuration is measured in seconds.     |  Yes|
 
 !!! caution
 
@@ -76,6 +75,8 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | :------------------------- | :-------------------- | :---------------------------------------------------------------------------- |:----------------- |
 |`default_parts_num`         | `10`                 | Specifies the default partition number when creating a new graph space.       |  No|
 |`default_replica_factor`    | `1`                   | Specifies the default replica number when creating a new graph space.         |  No|
+|`heartbeat_interval_secs`  | `10`     | Specifies the default heartbeat interval. Make sure the `heartbeat_interval_secs` values for all services are the same, otherwise NebulaGraph **CANNOT** work normally. This configuration is measured in seconds.     |  Yes|
+|`agent_heartbeat_interval_secs`| `60` | Specifies the default heartbeat interval for the Agent service. This configuration influences the time it takes for the system to determine that the Agent service is offline. This configuration is measured in seconds. |  No|
 
 ## RocksDB options configurations
 
