--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -128,7 +128,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                 | Predefined value                   | Description                               |Whether supports runtime dynamic modifications|
 | :------------------- | :------------------------ | :------------------------------------------ |:------------------|
-|`memory_tracker_limit_ratio`    |`0.8`  | The value of this parameter can be set to `(0, 1]`, `2`, and `3`.<br/>**Caution: When setting this parameter, ensure that the value of `system_memory_high_watermark_ratio` is not set to `1`, otherwise the value of this parameter will not take effect.**<br/>`(0, 1]`: The percentage of free memory. When the free memory is lower than this value, NebulaGraph stops accepting queries. <br/> Calculated as follows: <br/> `Free memory / (Total memory - Reserved memory)` <br/> **Note**: For clusters with a mixed-used environment, the value of `memory_tracker_limit_ratio` should be set to a **lower** value. For example, when Graphd is expected to occupy only 50% of memory, the value can be set to less than `0.5`.<br/>`2`: Dynamic Self Adaptive mode. MemoryTracker dynamically adjusts the available memory based on the system's current available memory. <br/>**Note**: This feature is experimental. As memory usage cannot be monitored in real time in dynamic adaptive mode, an OOM error may still occur to handle large memory allocations. <br/>`3`: Disable MemoryTracker. MemoryTracker only logs memory usage and does not interfere with executions even if the limit is exceeded.| Yes|
+|`memory_tracker_limit_ratio`    |`0.8`  | The value of this parameter can be set to `(0, 1]`, `2`, and `3`.<br/>**Caution: When setting this parameter, ensure that the value of `system_memory_high_watermark_ratio` is not set to `1`, otherwise the value of this parameter will not take effect.**<br/>`(0, 1]`: The percentage of available memory. Formula: `Percentage of available memory = Available memory / (Total memory - Reserved memory)`.<br/>When the expected memory required for a query exceeds the current available memory, {{nebula.name}} stops accepting queries.<br/> **Note**: For clusters with a mixed-used environment, the value of `memory_tracker_limit_ratio` should be set to a **lower** value. For example, when Graphd is expected to occupy only 50% of memory, the value can be set to less than `0.5`.<br/>`2`: Dynamic Self Adaptive mode. MemoryTracker dynamically adjusts the available memory based on the system's current available memory. <br/>**Note**: This feature is experimental. As memory usage cannot be monitored in real time in dynamic adaptive mode, an OOM error may still occur to handle large memory allocations. <br/>`3`: Disable MemoryTracker. MemoryTracker only logs memory usage and does not interfere with executions even if the limit is exceeded.| Yes|
 |`memory_tracker_untracked_reserved_memory_mb`    |`50`| The reserved memory that is not tracked by the memory tracker. Unit: MB.| Yes|
 |`memory_tracker_detail_log`    |`false` | Whether to enable the memory tracker log. When the value is `true`, the memory tracker log is generated.| Yes|
 |`memory_tracker_detail_log_interval_ms`    |`60000`| The time interval for generating the memory tracker log. Unit: Millisecond. `memory_tracker_detail_log` is `true` when this parameter takes effect.| Yes|
