add api reference for Java & python

--- a/docs-2.0-en/14.client/4.nebula-java-client.md
+++ b/docs-2.0-en/14.client/4.nebula-java-client.md
@@ -28,7 +28,7 @@ See [github](https://github.com/vesoft-inc/nebula-java/tree/{{java.branch}}).
 
 !!! note
 
-    We recommend that each thread uses one session. If multiple threads use the same session, the performance will be reduced.
+    We recommend that each thread use one session. If multiple threads use the same session, the performance will be reduced.
 
 When importing a Maven project with tools such as IDEA, set the following dependency in `pom.xml`.
 
@@ -57,7 +57,11 @@ If you cannot download the dependency for the daily development version, set the
 
 If there is no Maven to manage the project, manually download the [JAR file](https://repo1.maven.org/maven2/com/vesoft/) to install NebulaGraph Java.
 
-### Core of the example code
+## API reference
+
+Click [here](https://vesoft-inc.github.io/nebula-java/release-3.6/annotated.html) to check the classes and functions provided by the Java Client.
+
+## Core of the example code
 
 The NebulaGraph Java client provides both Connection Pool and Session Pool modes, using Connection Pool requires the user to manage session instances.
 
