--- a/docs-2.0-en/14.client/5.nebula-python-client.md
+++ b/docs-2.0-en/14.client/5.nebula-python-client.md
@@ -46,6 +46,10 @@ $ pip install nebula3-python==<version>
   $ pip install .
   ```
 
+## API reference
+
+Click [here](https://vesoft-inc.github.io/nebula-python/release-3.4/annotated.html) to check the classes and functions provided by the Python Client.
+
 ## Core of the example code
 
 
