--- a/docs-2.0-zh/14.client/4.nebula-java-client.md
+++ b/docs-2.0-zh/14.client/4.nebula-java-client.md
@@ -57,7 +57,11 @@
 
 如果没有 Maven 管理项目，请手动[下载 JAR 包](https://repo1.maven.org/maven2/com/vesoft/)进行安装。
 
-### 核心代码
+## API reference
+
+点击[此处](https://vesoft-inc.github.io/nebula-java/release-3.6/annotated.html)查看 Java 客户端提供的各种类和方法。
+
+## 核心代码
 
 NebulaGraph Java 客户端提供 Connection Pool 和 Session Pool 两种使用方式，使用 Connection Pool 需要用户自行管理 Session 实例。
 
