--- a/docs-2.0-zh/14.client/5.nebula-python-client.md
+++ b/docs-2.0-zh/14.client/5.nebula-python-client.md
@@ -46,6 +46,10 @@ $ pip install nebula3-python==<version>
   $ pip install .
   ```
 
+## API reference
+
+点击[此处](https://vesoft-inc.github.io/nebula-python/release-3.4/annotated.html)查看 Python 客户端提供的各种类和方法。
+
 ## 核心代码
 
 
